# Zero-Knowledge-Proof-Benchmark

./: LICENSE  README.md
groth16_zokrates/fibonacci/: abi.json  average.sh  fibonacci.zok  out  out.r1cs  out.wtns  proof.json  proving.key  test.sh  verification.key  witness
groth16_zokrates/hash/: abi.json  out  out.r1cs  out.wtns  poseidon_hash.zok  proof.json  proving.key  verification.key  verifying.key  witness
groth16_zokrates/hash/scripts/: average.sh  test.sh
groth16_zokrates/merkle/: abi.json  average.sh  inputs.json  merkle.zok  out  out.r1cs  out.wtns  proof.json  proving.key  test.sh  verification.key  witness
plonk_circom/fibonacci/: average.sh  circuit_final.zkey  fibonacci64.circom  fibonacci64.r1cs  fibonacci64.sym  input.json  pot12_0001.ptau  proof.json  test.sh  verification_key.json
plonk_circom/fibonacci/fibonacci64_js/: fibonacci64.wasm
plonk_circom/hash/: circuit.circom  input.json
plonk_circom/hash/circuit_js/: circuit.wasm
plonk_circom/hash/scripts/: VerifierPlonk  average.sh  test.sh
plonk_circom/merkle/: average.sh  input.json  merkle.circom  merkle.r1cs  merkle.sym  merkle.zkey  pot7_0000.ptau  proof.json  test.sh  verification_key.json  witness.wtns
plonk_circom/merkle/merkle_js/: merkle.wasm
stark_winterfell/: Cargo.toml
stark_winterfell/src/: main.rs
winterfell/examples/: Cargo.toml
